# sideProject

./: .gitignore  README.md
3DVggBinaryClassOvules/: config.py  denseNet121_3D.py  loss.py  main.py  utils.py  vgg16Bn3D.py
3DVggBinaryClassOvules/data/: datasets.py
3DVggBinaryClassOvules/pascal5/: config.py  loadDataSet.py
3DVggBinaryClassOvules/pascal5/script/: splitDataSet.py
DiscSuperpixelSelection/: config.py  loss.py  main.py  models.py  score.py  utils.py
DiscSuperpixelSelection/data/: datasets.py
VAE_AlarmSystem/: config.py  loss.py  main.py  utils.py  vae.py
VAE_AlarmSystem/data/: datasets.py
VAE_AlarmSystem/pascal5/: createDataSet.py  randObjDset.py
affogatoTest/: main.py
doc/images/: mutex_sketch_overall.xcf  reward_calc_sketch.xcf
fewShotLearningBF/: config.py  fs_model.py  loss.py  main.py  utils.py
fewShotLearningBF/pascal5/: loadDataSet.py
fewShotLearningDM/: fs_model1.py  fs_model2.py  kmeans.py  loss.py  main.py  utils.py
fewShotLearningDM/data/: datasets.py
fewShotLearningDM/pascal5/: loadDataSet.py
fewShotLearningDM/pascal5/script/: imgProcess.py
mutex_Wtsd/: a2c.py  datasets.py  distribution_correction.py  main.py  mutex_watershed.py  not_needed  prep_and_run.py  q_learning.py  reinforce.py  replayMemory.py  ril_function_models.py  run_a2c_mnm.py  run_dq_mnm.py  run_reinforce_mnm.py  simple_unet.py  test_models.py  test_multicut.py  testing_stuff.py  train_affinities.py  trash  utils.py
mutex_Wtsd/agents/: a2C_agent_mnm.py  acer.py  acer_continuous.py  agent.py  batched_sac.py  batched_sac_sg_rew.py  distribution_correction.py  dql.py  exploitation_functions.py  exploration_functions.py  feat1d_offpac_gcn.py  offpac.py  offpac_2_models.py  ql_agent_dn.py  ql_agent_mnm.py  ql_agent_unet.py  ql_agent_unet_fcn.py  ql_gcn_agent_1.py  qlagent.py  qlretrace_agent_unet.py  reinforce_agent_mnm.py  reinforce_agent_unet.py  replayMemory.py  sac.py  sac_gr_sg.py  sac_seed_test.py  sac_seed_test_global.py  sac_seed_test_sg.py  sac_seed_test_sg_global.py  sac_sparse_rewards.py  tr_opposd_agent_gcn.py  tr_opposd_agent_unet.py
mutex_Wtsd/config/fe/: pretrained.yaml
mutex_Wtsd/config/general/: batched_sac.yaml  batched_sac_dbg.yaml  batched_sg_rew_sac_dbg.yaml  dbg.yaml  default_general.yaml  general1.yaml  general2.yaml  general3.yaml  seed_test.yaml  seed_test1.yaml  seed_test_global.yaml  seed_test_sg.yaml  seed_test_sg_global.yaml  seed_test_sg_global_rules.yaml  (+4 more)
mutex_Wtsd/cpp_utils/: CMakeLists.txt
mutex_Wtsd/cpp_utils/graph_utils/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
mutex_Wtsd/cpp_utils/graph_utils/cmake/: FindNUMPY.cmake
mutex_Wtsd/cpp_utils/graph_utils/conda-recipe/: build.sh  meta.yaml
mutex_Wtsd/cpp_utils/graph_utils/inc/: CMakeLists.txt  graph_utils.hxx
mutex_Wtsd/cpp_utils/graph_utils/include/: connected_components.hxx
mutex_Wtsd/cpp_utils/graph_utils/python/rag_utils/: __init__.py  connected_components.py
mutex_Wtsd/cpp_utils/graph_utils/src/: CMakeLists.txt  Makefile  cmake_install.cmake  graph_utils.cxx
mutex_Wtsd/cpp_utils/graph_utils/src/lib/: CMakeLists.txt  Makefile  cmake_install.cmake  rag_utils.cxx
mutex_Wtsd/cpp_utils/graph_utils/src/python/rag_utils/: connected_components.py
mutex_Wtsd/cpp_utils/graph_utils/src/test/: test_connected_components.py
mutex_Wtsd/cpp_utils/graph_utils/src/test/rags_h5/: rag_0.h5  rag_1.h5  rag_10.h5  rag_100.h5  rag_101.h5  rag_102.h5  rag_103.h5  rag_104.h5  rag_105.h5  rag_106.h5  rag_107.h5  rag_108.h5  rag_109.h5  rag_11.h5  rag_110.h5  rag_111.h5  rag_112.h5  rag_113.h5  rag_114.h5  rag_115.h5  rag_116.h5  rag_117.h5  rag_118.h5  rag_119.h5  rag_12.h5  rag_120.h5  rag_121.h5  rag_122.h5  rag_123.h5  rag_124.h5  rag_125.h5  rag_126.h5  rag_127.h5  rag_128.h5  rag_129.h5  rag_13.h5  rag_130.h5  rag_131.h5  rag_132.h5  rag_133.h5  (+304 more)
mutex_Wtsd/cpp_utils/graph_utils/test/: CMakeLists.txt
mutex_Wtsd/cpp_utils/mutex_wtsd/: CMakeCache.txt  Makefile  cmake_install.cmake
mutex_Wtsd/cpp_utils/mutex_wtsd/include/: mutex_watershed.hxx
mutex_Wtsd/cpp_utils/mutex_wtsd/source/: segmentation.cxx
mutex_Wtsd/data/: datasets.py  disc_datasets.py  disjoint_disc_fast.py  disjoint_discs.py  disjoint_discs_balanced_graph.py  mtx_wtsd.py  spg_dset.py  store_data_ddisc.py  store_data_sqrsellips.py
mutex_Wtsd/environments/: batched_sp_grph.py  batched_sp_sub_grph.py  batched_sp_sub_grph_lg.py  environment_bc.py  mtxwtsd_dn.py  mtxwtsd_mnm.py  mtxwtsd_unet.py  mtxwtsd_unet_fcn.py  mutex_wtsd_bc.py  sp_grph_gcn_1.py  sp_grph_gcn_2.py
mutex_Wtsd/losses/: rag_contrastive_loss.py  rag_contrastive_triplet_loss.py
mutex_Wtsd/models/: conv_net_1d.py  ril_function_models.py  simple_unet.py  sp_embed_unet.py  sp_embed_unet1.py  sp_embed_with_affs.py  sp_fe_ae.py
mutex_Wtsd/optimizers/: adam.py  shared_rmsprob.py
mutex_Wtsd/trainers/: a2c.py  q_learning.py  reinforce.py  run_a2c_mnm.py  run_dq_mnm.py  run_reinforce_mnm.py  test_models.py  test_multicut.py  train_acer.py  train_affinities.py  train_dql.py  train_naive_gcn.py  train_offpac.py  train_offpac_2_models.py  train_sac.py
mutex_Wtsd/utils/: affinities.py  cstm_tensor.py  general.py  graphs.py  mean_shift.py  normals.py  patch_manager.py  reward_functions.py  sigmoid_normal.py  sigmoid_normal1.py  truncated_normal.py  utils.py
paper/: Few-Shot Adversarial Domain Adaptation_summ.docx
randomObjects/: getBg.m  getBg3d.m  getDiscInstance.m  getTrainInstance.m  randObj.m
randomObjects/ilastik/: Superpixels1.h5  Superpixels10.h5  Superpixels11.h5  Superpixels12.h5  Superpixels14.h5  Superpixels15.h5  Superpixels16.h5  Superpixels18.h5  Superpixels19.h5  Superpixels2.h5  Superpixels20.h5  Superpixels3.h5  Superpixels4.h5  Superpixels5.h5  Superpixels6.h5  Superpixels7.h5  Superpixels8.h5  Superpixels9.h5
thesis/presentation/: .~lock.pres.odp#  TexMathPream  pres.odp
thesis/thesis_text/: abstract.tex  bibliography.bib  introduction.tex  main_frame.aux  main_frame.bbl  main_frame.blg  main_frame.lof  main_frame.out  main_frame.tex  main_frame.toc  notation.tex  statement.tex  thesis.sty
(+75 files in other folders)
